--- a/Css/Notice.css
+++ b/Css/Notice.css
@@ -11,16 +11,18 @@
     background-color: #FFFDE7;
   }
 
-  .top-bar {
-    display: flex;
-    align-items: center;
-    justify-content: center;       
-    position: relative;          
-    background-color: #FFFDE7;
-    margin-bottom: 20px;
-    padding: 20px 8px;
-
-  }
+ .top-bar {
+  position: relative;           /* 뒤로가기 버튼과 텍스트 배치용 */
+  display: flex;
+  justify-content: center;      /* 중앙 기준으로 텍스트 정렬 */
+  align-items: center;
+  font-size: 20px;
+  font-weight: 800;
+  background-color: #FFFDE7;
+  padding: 15px;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 15px;
+}
 
   h1 {
     font-size: 20px;
